5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4123/executions/1585_842.log
== TEST (2019-03-21 11:48:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = input()
for x range (0,3):
	numero[x] = int(numero[x])
	soma = numero[x] + soma
print(soma)
-- ERROR:
File "XXXX", line 5
    for x range (0,3):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:48:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = input()
for x in range (0,3):
	numero[x] = int(numero[x])
	soma = numero[x] + soma
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    numero[x] = int(numero[x])
TypeError: 'str' object does not support item assignment
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:48:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = input()
for x in range (0,3):
	numero[x] = int(numero[x])
	soma = numero[x] + soma
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    numero[x] = int(numero[x])
TypeError: 'str' object does not support item assignment
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:49:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = input()
 
for x in range (0,3):
	numeroint[x] = int(numero[x])
	soma = numeroint[x] + soma
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    numeroint[x] = int(numero[x])
NameError: name 'numeroint' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:50:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero[] = input()
numeroint = []
 
for x in range (0,3):
	numeroint[x] = int(numero[x])
	soma = numeroint[x] + soma
print(soma)
-- ERROR:
File "XXXX", line 4
    numero[] = input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:50:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = input()
numeroint = []
 
for x in range (0,3):
	numeroint[x] = int(numero[x])
	soma = numeroint[x] + soma
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    numeroint[x] = int(numero[x])
IndexError: list assignment index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:51:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = input()
numeroint = []
 
for x in range (0,3):
	numeroint[x] = int(numero[x])
	soma = numeroint[x] + soma
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    numeroint[x] = int(numero[x])
IndexError: list assignment index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:51:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = input()
numeroint = []
 
for x in range (0,3):
	numeroint[x] = int(numero[x])
	soma = numeroint[x] + soma
	x +=
print(soma)
-- ERROR:
File "XXXX", line 10
    x +=
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:51:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = input()
numeroint = []
 
for x in range (0,3):
	numeroint[x] = int(numero[x])
	soma = numeroint[x] + soma
	x = x+1
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    numeroint[x] = int(numero[x])
IndexError: list assignment index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:57:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = str(input())
#numeroi[0] = numero%1000
#numeroi[1] = numeroi[0]%100
#numeroi[2] = numeroi[1]%10
#numeroi[3] = numero%[2]%1
for x in range (0,3):
	soma = numero[x] + soma
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    soma = numero[x] + soma
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:58:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = str(input())
#numeroi[0] = numero%1000
#numeroi[1] = numeroi[0]%100
#numeroi[2] = numeroi[1]%10
#numeroi[3] = numero%[2]%1
x = 0
for x in range (0,3):
	soma = numero[x] + soma
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    soma = numero[x] + soma
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:58:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = str(input())
#numeroi[0] = numero%1000
#numeroi[1] = numeroi[0]%100
#numeroi[2] = numeroi[1]%10
#numeroi[3] = numero%[2]%1
x = 0
soma = 0
for x in range (0,3):
	soma = numero[x] + soma
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    soma = numero[x] + soma
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:58:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = str(input())
#numeroi[0] = numero%1000
#numeroi[1] = numeroi[0]%100
#numeroi[2] = numeroi[1]%10
#numeroi[3] = numero%[2]%1
x = 0
soma = 0
for x in range (0,3):
	soma = int(numero[x]) + soma
print(soma)
-- OUTPUT:
17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:58:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = str(input())
#numeroi[0] = numero%1000
#numeroi[1] = numeroi[0]%100
#numeroi[2] = numeroi[1]%10
#numeroi[3] = numero%[2]%1
x = 0
soma = 0
for x in range (0,4):
	soma = int(numero[x]) + soma
print(soma)
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:59:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = str(input())
x = 0
soma = 0
for x in range (0,4):
	soma = int(numero[x]) + soma
print(soma)
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:59:15) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numero = str(input())
x = 0
soma = 0
for x in range (0,4):
	soma = int(numero[x]) + soma
print(soma)
-- EXECUTION TIME:
0.136285
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
